# typing-validation

./: .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  =  CLAUDE.md  CONTRIBUTING.md  README.md  README.md.old  README.rst  SECURITY.md  autodoc_typehints.py  benchmark.py  make-docs.bat  pypi-distrib-upload.bat  pypi-upload.py  pyproject.toml  run-black.bat  run-tests.bat  setup.cfg  tox.ini
.github/workflows/: checks.yml  python-pytest.yml
benchmark/: MARSHALLING.md  PEER-COMPARISON.md  REPORT.md  RESULTS.md  __init__.py  __main__.py  cases.py  environment.py  marshalling.py  measure.py  table.py  v1.py
benchmark/tools/: __init__.py  cases.py  compare.py  contenders.py  extended.py  report.py  suite.py  tables.py  v1.py
docs/: api-toc.rst  api.rst  autodoc-type-aliases.json  conf.py  getting-started.rst  index.html  index.rst  make-api.json  make-api.py  requirements.txt
docs/api/: typing_validation.cache.rst  typing_validation.composition.rst  typing_validation.descriptor.rst  typing_validation.diagnosis.rst  typing_validation.emission.rst  typing_validation.errors.rst  typing_validation.inspection.rst  typing_validation.inspector.rst  typing_validation.nodes.rst  typing_validation.numpy.rst  typing_validation.plugins.rst  typing_validation.resolution.rst  typing_validation.rst  typing_validation.validation.rst  typing_validation.validation_failure.rst
docs/intersphinx/: python-objects.inv
docs/source/: conf.py  getting-started.rst
docs/typing_validation/: index.html  validate.html  validation.html  validation_failure.html
knowledge/: DESIGN.md  GENERIC-ARGUMENTS.md  README.md  TYPES.md
test/: __init__.py  cases.py  mechanisms.py  test_00_validate.py  test_01_can_validate.py  test_02_descriptor.py  test_03_validate_annotations.py  test_04_validated_iter.py  test_05_module_import.py  test_api.py  test_compiled.py  test_diagnosis.py  test_differential.py  test_display.py  test_docs.py  test_errors.py  test_module.py  test_nodes.py  test_numpy.py  test_plugins.py  test_resolution.py  test_style.py  test_typeform.py  test_validate.py  test_validator.py
typing_validation/: __init__.py  _cache.py  _display.py  _resolution.py  composition.py  descriptor.py  diagnosis.py  emission.py  errors.py  inspection.py  inspector.py  nodes.py  numpy.py  plugins.py  resolution.py  validate.py  validation.py  validation_failure.py
