# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/#setup-cfg

[metadata]
name = typing-validation
author = hashberg
author_email = sg495@users.noreply.github.com
description = A simple library for runtime type-checking.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/hashberg-io/typing-validation
project_urls =
    Bug Tracker = https://github.com/hashberg-io/typing-validation/issues
# see https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Natural Language :: English
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.7
install_requires =
    typing_extensions>=4.6.0; python_version<"3.11"

[options.package_data]
* = py.typed

[options.packages.find]
exclude = test

[options.extras_require]
dev =
    mypy
    pylint
    pytest
    pytest-cov
    rich
